DOMjudge Programming Contest Judging System

Version 3.1.4 - SVN
-------------------
 - Prevent empty lines in diff output due to DOS newlines.
 - Move charset defines to common-config for judgedaemon.
 - Fix HTML validation error.
 - Fix static compilation with GHC.

Version 3.1.3 - 21 December 2010
--------------------------------
 - In JS problem name detection, probid needs to be casenormalised too.
 - Fix websubmit when using numeric problem ID's, thanks Vladimir Vassiliev.
 - Improve documentation on JVM memory problems.
 - Set MySQL connection encoding explicitly. Introduces a new option:
   DJ_CHARACTER_SET_MYSQL.

Version 3.1.2 - 27 October 2010
-------------------------------
 - Fix missing permissions for plugin interface SQL user.
 - Fix information leak in clarification problems list. (Closes: #3096018)
 - Small documentation improvements.
 - Do not check scoreboard cache for key integrity; this
   prevents deletion of teams while adding no real value.

Version 3.1.1 - 22 August 2010
------------------------------
 - Update upstream autoconf macro's fixing multiple small bugs.
 - Fix autoconf checks for libcURL and static linking.
 - Fix Makefile rules for building library objects and for
   (re)generating configure script.
 - Workaround sorttable colspan bug and use stable sorting.
 - Small documentation fixes.
 - Fix expected output for reboot test-source.
 - Don't shorten a team's hostname if it is an IP address.
 - Add unique index on language extension, required for compile scripts.
 - Remove literate Haskell test-source: doesn't compile without extension.

Version 3.1.0 - 14 July 2010
----------------------------
 - Add multiple testcases support.
 - Add PHP session support as alternative to IP address authentication.
   Based on patches by Tobias Werth.
 - Bugfixes and improvements to checktestdata program.
 - Fix error trapping in subshells, thanks Jan Jergus. (Closes: #2866430)