@@ -11,7 +11,7 @@ DEST="$2"
 # -static:	Static link Haskell libraries
 # -optl-static:	Pass '-static' option to the linker
 # -optl-pthread: Pass '-pthread' option to the linker (see Debian bug #593402)
-ghc -Wall -O -static -optl-static -optl-pthread -o $DEST $SOURCE
+ghc -Wall -Wwarn -O -static -optl-static -optl-pthread -o $DEST $SOURCE
 exitcode=$?
 
 # clean created files:
