@@ -6,6 +6,7 @@ Version 3.1.4 - SVN
  - Move charset defines to common-config for judgedaemon.
  - Fix HTML validation error.
  - Fix static compilation with GHC.
+ - Use language extension instead of langid in submit_solution().
 
 Version 3.1.3 - 21 December 2010
 --------------------------------
